Add docspace services (#12)
* Add docspace services

* Change statefulsets of new services

* Change comtainer names of new services

* Fix variable names and upstream (#13)

* Fix proxy upstream and job install

* Add the ability to install appserver (#14)

* Add the ability to install appserver

* Fix job update

* Add resources to manifests

* Add resources to initContainer

* Change the application name (#15)

Co-authored-by: kireevdmitry <octavarium78@gmail.com>

--- a/templates/configmaps/update-app.yaml
+++ b/templates/configmaps/update-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: update-appserver
+  name: update-app
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "1"
@@ -9,7 +9,10 @@ metadata:
 data:
   update.sh: |-
     #!/bin/bash
-    mysql -h mysql -u root -p$MYSQL_ROOT_PASSWORD -e "show databases;" > /dev/null
+    mysql -h {{ .Values.connections.mysqlHost }} \
+      -u root \
+      -p$MYSQL_ROOT_PASSWORD \
+      -e "show databases;" > /dev/null
     if [ $? -ne 0 ]; then
       echo -e "\e[0;31m DB is not available \e[0m"
       exit 1
