--- a/templates/services/onlyoffice-thumbnails.yaml
+++ b/templates/services/onlyoffice-thumbnails.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.product.name "appsever" }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -6,12 +7,13 @@ metadata:
     app: onlyoffice-thumbnails
 spec:
   ports:
-  - port: {{ .Values.containerPorts.appserver.http }}
-    name: http
-    targetPort: {{ .Values.containerPorts.appserver.http }}
+  - port: {{ .Values.containerPorts.app }}
+    name: app
+    targetPort: {{ .Values.containerPorts.app }}
   - port: {{ .Values.containerPorts.thumbnails }}
     name: thum
     targetPort: {{ .Values.containerPorts.thumbnails }}
   selector:
     statefulset.kubernetes.io/pod-name: onlyoffice-thumbnails-0
   type: ClusterIP
+{{- end }}
