--- a/templates/configmaps/app.yaml
+++ b/templates/configmaps/app.yaml
@@ -1,8 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: appserver-all
+  name: app-all
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "1"
 data:
+  ENV_EXTENSION: {{ .Values.connections.envExtension | quote }}
   DATABASE_MIGRATION: {{ .Values.connections.mysqlDatabaseMigration | quote }}
   MYSQL_HOST: {{ .Values.connections.mysqlHost }}
   MYSQL_DATABASE: {{ .Values.connections.mysqlDatabase }}
@@ -12,7 +16,9 @@ data:
   APP_CORE_MACHINEKEY: {{ .Values.connections.appCoreMachinekey }}
   DOCUMENT_SERVER_URL_PUBLIC: {{ .Values.connections.DocumentServerUrlPublic | quote }}
   DOCUMENT_SERVER_URL_INTERNAL: {{ .Values.connections.DocumentServerUrlInternal | quote }}
-  DOCUMENT_SERVER_URL_CONVERTER: {{ .Values.connections.DocumentServerUrlConverter | quote }}
+  APP_URL_PORTAL: {{ .Values.connections.AppUrlPortal | quote }}
   KAFKA_HOST: {{ .Values.connections.kafkaHost }}
   ELK_HOST: {{ .Values.connections.elkHost }}
   PROXY_HOST: {{ .Values.connections.proxyHost }}
+  REDIS_HOST: {{ .Values.connections.redisHost }}
+  RABBIT_HOST: {{ .Values.connections.rabbitHost }}
