--- a/templates/services/onlyoffice-webhooks-service.yaml
+++ b/templates/services/onlyoffice-webhooks-service.yaml
@@ -1,14 +1,16 @@
+{{- if eq .Values.product.name "docspace" }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: onlyoffice-telegram-service
+  name: onlyoffice-webhooks-service
   labels:
-    app: onlyoffice-telegram-service
+    app: onlyoffice-webhooks-service
 spec:
   ports:
   - port: {{ .Values.containerPorts.app }}
     name: app
     targetPort: {{ .Values.containerPorts.app }}
   selector:
-    statefulset.kubernetes.io/pod-name: onlyoffice-telegram-service-0
+    statefulset.kubernetes.io/pod-name: onlyoffice-webhooks-service-0
   type: ClusterIP
+{{- end }}
