Add docspace installation instructions

--- a/sources/secrets/mysql-password.yaml
+++ b/sources/secrets/mysql-password.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql-password
+  name: mysql
 type: Opaque
 stringData:
   mysql-root-password: my-secret-pw
