Fix installation instructions

--- a/sources/secrets/mysql-password.yaml
+++ b/sources/secrets/mysql-password.yaml
@@ -4,5 +4,5 @@ metadata:
   name: mysql
 type: Opaque
 stringData:
-  mysql-root-password: my-secret-pw
-  mysql-password: onlyoffice_pass
+  mysql-root-password: "my-secret-pw"
+  mysql-password: "docspace_pass"
