--- a/templates/services/onlyoffice-proxy.yaml
+++ b/templates/services/onlyoffice-proxy.yaml
@@ -1,7 +1,14 @@
+{{- if eq (include "app.svc.proxy.create" .) "true" }}
 apiVersion: v1
 kind: Service
 metadata:
   name: onlyoffice-proxy
+  {{- if .Values.service.proxy.annotations }}
+  annotations:
+    {{- range $key, $value := .Values.service.proxy.annotations }}
+    {{ $key }}: {{ tpl $value $ }}
+    {{- end }}
+  {{- end }}
 spec:
   ports:
   - port: {{ .Values.containerPorts.app }}
@@ -13,9 +20,10 @@ spec:
   - port: {{ .Values.containerPorts.proxy.internal }}
     name: internal
     targetPort: {{ .Values.containerPorts.proxy.internal }}
-  - port: {{ .Values.containerPorts.proxy.external }}
+  - port: {{ .Values.service.proxy.port.external }}
     name: external
     targetPort: {{ .Values.containerPorts.proxy.external }}
   selector:
     app: onlyoffice-proxy
-  type: ClusterIP
+  type: {{ .Values.service.proxy.type }}
+{{- end }}
