--- a/values.yaml
+++ b/values.yaml
@@ -268,7 +268,7 @@ statefulsetUpdateStrategy:
 ## This block defines parameters for the Nginx ingress only
 
 ingress:
-  enabled: true
+  enabled: false
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: 100m
