--- a/values.yaml
+++ b/values.yaml
@@ -157,6 +157,15 @@ resources:
   limits:
     memory: "1Gi"
     cpu: "1000m"
+## App service parameters
+##
+service:
+  proxy:
+    existing: ""
+    annotations: {}
+    port:
+      external: 8092
+    type: ClusterIP
 
 persistence:
   storageClass: "nfs"
@@ -259,7 +268,7 @@ statefulsetUpdateStrategy:
 ## This block defines parameters for the Nginx ingress only
 
 ingress:
-  enabled: true
+  enabled: false
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: 100m
