--- a/templates/deployments/onlyoffice-mail.yaml
+++ b/templates/deployments/onlyoffice-mail.yaml
@@ -154,13 +154,13 @@ spec:
       {{- end }}
       - name: app-data
         persistentVolumeClaim:
-          claimName: app-data
+          claimName: {{ template "app.pvc.data.name" . }}
       - name: files-data
         persistentVolumeClaim:
-          claimName: files-data
+          claimName: {{ template "app.pvc.files.name" . }}
       - name: people-data
         persistentVolumeClaim:
-          claimName: people-data
+          claimName: {{ template "app.pvc.people.name" . }}
       {{- if .Values.onlyofficeCrm.enabled }}
       - name: crm-data
         persistentVolumeClaim:
