--- a/templates/pvc/proxy-log.yaml
+++ b/templates/pvc/proxy-log.yaml
@@ -1,3 +1,4 @@
+{{- if eq (include "app.pvc.proxy.create" .) "true" }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -9,3 +10,4 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.proxyLog.size }}
+{{- end }}
