--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@
 ## This block defines common parameters for all deployments and statefulsets
 
 ## product.name The name of the product to be deployed. Depending on the name, different manifests will be applied
-## Allowed values: `docspace` or `docspace`
+## Allowed values: `docspace` or `appserver`
 ##
 product:
   name: "docspace"
